# bus_model

./: README.md  manage.py  pyproject.toml
busmodel/: models.py  settings.py  tests.py
